# DeepFakeGuard

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
docker/: Dockerfile.api  Dockerfile.worker
src/: __init__.py
src/api/: database.py  dependencies.py  main.py  models.py
src/api/routes/: auth.py
src/api/schemas/: __init__.py  user.py
src/core/: config.py  security.py
src/tasks/: celery_app.py
tests/: test_auth.py  test_health.py  test_models.py
